pkg/i2gw/providers/nginx/fixtures/virtualserver/output/nginx-vs-custom-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: custom.example.com
    name: http-8080-custom-example-com
    port: 8080
    protocol: HTTP
  - hostname: custom.example.com
    name: https-8443-custom-example-com-custom-tls
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: custom-tls
      mode: Terminate
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: custom-listeners-vs
  name: custom-listeners-vs-httproute
  namespace: default
spec:
  hostnames:
  - custom.example.com
  parentRefs:
  - name: nginx
    sectionName: http-8080-custom-example-com
  - name: nginx
    sectionName: https-8443-custom-example-com-custom-tls
  rules:
  - backendRefs:
    - name: app-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /app
status:
  parents: null
