pkg/i2gw/providers/nginx/fixtures/virtualserver/output/nginx-vs-mixed-matches.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: api.example.com
    name: http-80-api-example-com
    port: 80
    protocol: HTTP
  - hostname: api.example.com
    name: https-443-api-example-com-api-tls
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: api-tls
      mode: Terminate
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: mixed-matches-vs
  name: mixed-matches-vs-httproute
  namespace: default
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: nginx
    sectionName: http-80-api-example-com
  - name: nginx
    sectionName: https-443-api-example-com-api-tls
  rules:
  - backendRefs:
    - name: http-service
      port: 8080
    matches:
    - headers:
      - name: Content-Type
        type: RegularExpression
        value: (?i)^application/json$
      path:
        type: PathPrefix
        value: /api
  - backendRefs:
    - name: http-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
status:
  parents: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: mixed-matches-vs
  name: mixed-matches-vs-grpcroute
  namespace: default
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: nginx
    sectionName: http-80-api-example-com
  - name: nginx
    sectionName: https-443-api-example-com-api-tls
  rules:
  - backendRefs:
    - name: grpc-service
      port: 9090
    matches:
    - headers:
      - name: Content-Type
        type: RegularExpression
        value: (?i)^application/grpc$
      method:
        service: api
status:
  parents: null
