pkg/i2gw/providers/nginx/fixtures/virtualserver/output/nginx-vs-tls-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: secure.example.com
    name: http-80-secure-example-com
    port: 80
    protocol: HTTP
  - hostname: secure.example.com
    name: https-443-secure-example-com-secure-tls
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: secure-tls
      mode: Terminate
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: tls-redirect-webapp
  name: tls-redirect-webapp-httproute
  namespace: default
spec:
  hostnames:
  - secure.example.com
  parentRefs:
  - name: nginx
    sectionName: https-443-secure-example-com-secure-tls
  rules:
  - backendRefs:
    - name: webapp-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: webapp-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
status:
  parents: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: tls-redirect-webapp
  name: tls-redirect-webapp-redirect
  namespace: default
spec:
  parentRefs:
  - name: default-gateway
    sectionName: http-80-secure-example-com
  rules:
  - filters:
    - requestRedirect:
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: null
