pkg/i2gw/providers/nginx/fixtures/virtualserver/output/nginx-vs-unsupported-fields.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: webapp.example.com
    name: http-80-webapp-example-com
    port: 80
    protocol: HTTP
  - hostname: webapp.example.com
    name: https-443-webapp-example-com-webapp-tls
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: webapp-tls
      mode: Terminate
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
    ingress2gateway.io/vs-name: unsupported-fields-webapp
  name: unsupported-fields-webapp-httproute
  namespace: default
spec:
  hostnames:
  - webapp.example.com
  parentRefs:
  - name: nginx
    sectionName: http-80-webapp-example-com
  - name: nginx
    sectionName: https-443-webapp-example-com-webapp-tls
  rules:
  - backendRefs:
    - name: webapp-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: null
